--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+a {
+  text-decoration: none;
+  color: black; }
+
+a:hover {
+  color: blue; }
+
 main {
   background: url("../images/homepage-image.jpg");
   background-size: cover;
@@ -6,24 +13,42 @@ main {
   height: 93vh;
   width: auto;
   clear: both;
-  padding-top: .1px; }
+  padding-top: .01px; }
 
 header {
-  height: 3vh;
+  height: 3.5vh;
   background-color: RGB(127, 127, 127);
   padding-top: .5vh; }
 
 header a {
-  float: left; }
+  float: left;
+  text-decoration: none;
+  color: black;
+  padding-top: .75vh;
+  font-size: 2vh; }
+
+header a:hover {
+  color: blue; }
 
 header #right {
   float: right;
   display: flex; }
 
+header #callToAction {
+  background-color: RGB(254, 229, 153);
+  padding: .25vh;
+  border: 1px solid black; }
+
+header #callToAction a {
+  padding-top: .3vh; }
+
 .fa-bars {
   margin-left: .5em;
   margin-right: .25em;
-  padding-top: .2em; }
+  padding-top: .25vh; }
+
+.fa-bars:hover {
+  color: black; }
 
 footer {
   height: 3vh;
@@ -43,7 +68,8 @@ h1, h2, h3, h4, h5 {
 h1 {
   font-size: 5vw;
   max-width: 50%;
-  margin-bottom: 1vh; }
+  margin-bottom: 1vh;
+  padding-top: 2vh; }
 
 h5 {
   font-size: 2vw;
@@ -62,5 +88,28 @@ p, a, button {
   text-decoration: none;
   color: black;
   font-size: 2.5vw; }
+
+#menu a:hover {
+  color: blue; }
+
+#overlay {
+  position: fixed;
+  /* Sit on top of the page content */
+  display: none;
+  /* Hidden by default */
+  width: 100%;
+  /* Full width (cover the whole page) */
+  height: 100%;
+  /* Full height (cover the whole page) */
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Black background with opacity */
+  z-index: 2;
+  /* Specify a stack order in case you're using a different order for other elements */
+  cursor: pointer;
+  /* Add a pointer on hover */ }
 
 /*# sourceMappingURL=styles.css.map */
