--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,7 +11,7 @@ a:hover {
   color: blue;
 }
 
-main {
+#homepage {
   background: url("../images/homepage-image.jpg");
   background-size:cover;
   background-position: center;
@@ -22,13 +22,13 @@ main {
   padding-top: .01px;
 }
 
-header {
+#main-header {
   height: 3.5vh;
   background-color: $background-color;
   padding-top: .5vh;
 }
 
-header a {
+#main-header a {
   float: left;
   text-decoration: none;
   color: black;
@@ -36,22 +36,22 @@ header a {
   font-size: 2vh;
 }
 
-header a:hover {
+#main-header a:hover {
   color: blue;
 }
 
-header #right {
+#main-header #right {
   float: right;
   display:flex;
 }
 
-header #callToAction {
+#main-header #callToAction {
   background-color: RGB(254,229,153);
   padding: .25vh;
   border: 1px solid black;
 }
 
-header #callToAction a {
+#main-header #callToAction a {
   padding-top: .3vh;
 }
 
@@ -65,7 +65,7 @@ header #callToAction a {
   color: black;
 }
 
-footer {
+#main-footer {
   height: 3vh;
   background-color: $background-color;
   padding-top: .5vh;
@@ -119,16 +119,57 @@ p, a, button {
 
 
 #overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
-    top: 0; 
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
+  position: fixed; /* Sit on top of the page content */
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width (cover the whole page) */
+  height: 100%; /* Full height (cover the whole page) */
+  top: 0; 
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,1); /* Black background with opacity */
+  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
 }
 
+#menu-header {
+  height: 5vh;
+  background-color: rgba(0,0,0,1);
+}
+
+#menu-header a {
+  float: left;
+  padding-top: .75vh;
+}
+
+#menu-header i {
+  float: right;
+}
+
+#overlay a:hover {
+  color: white
+}
+
+#overlay a, p, i {
+  color: white;
+}
+
+#menu-main {
+  height: 80vh;
+  width: auto;
+  clear: both;
+  padding-top: 8vh;
+}
+
+#menu-main a {
+  display:block;
+  margin-bottom: 3vh;
+  text-decoration: none;
+  text-align: right;
+  font-size: 4vw;
+}
+
+menu-footer {
+  height: 5vh;
+  background-color: rgba(0,0,0,1);
+  padding-top: .5vh;
+}
