--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,55 @@
-a {
-  text-decoration: none;
-  color: black; }
-
-a:hover {
-  color: blue; }
-
 #homepage {
-  background: url("../images/homepage-image.jpg");
+  background-image: url("../images/homepage-image.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 93vh;
+  width: auto;
+  clear: both;
+  padding-top: .01px; }
+
+#homepage-education {
+  background-image: url("../images/solar-panels.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 93vh;
+  width: auto;
+  clear: both;
+  padding-top: .01px; }
+
+#homepage-industry {
+  background-image: url("../images/energy-industry.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 93vh;
+  width: auto;
+  clear: both;
+  padding-top: .01px; }
+
+#homepage-outreach {
+  background-image: url("../images/outreach.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 93vh;
+  width: auto;
+  clear: both;
+  padding-top: .01px; }
+
+#homepage-research {
+  background-image: url("../images/research.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 93vh;
+  width: auto;
+  clear: both;
+  padding-top: .01px; }
+
+#homepage-about {
+  background-image: url("../images/UF-campus.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -16,24 +59,19 @@ a:hover {
   padding-top: .01px; }
 
 #main-header {
-  height: 3.5vh;
+  height: 3vh;
   background-color: RGB(127, 127, 127);
   padding-top: .5vh; }
 
-#main-header a {
+#main-header #name {
   float: left;
   text-decoration: none;
-  color: black;
-  padding-top: .75vh;
+  color: white;
+  padding-top: .4vh;
   font-size: 2vh; }
-
-#main-header a:hover {
-  color: blue; }
 
 #main-header #right {
   float: right;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex; }
 
 #main-header #callToAction {
@@ -42,27 +80,28 @@ a:hover {
   border: 1px solid black; }
 
 #main-header #callToAction a {
-  padding-top: .3vh; }
+  font-size: 2vh;
+  text-decoration: none;
+  color: black; }
 
 .fa-bars {
   margin-left: .5em;
   margin-right: .25em;
-  padding-top: .25vh; }
-
-.fa-bars:hover {
+  padding-top: .25vh;
   color: black; }
 
 #main-footer {
-  height: 3vh;
+  height: 2vh;
   background-color: RGB(127, 127, 127);
   padding-top: .5vh; }
+
+#main-footer p a {
+  text-decoration: none;
+  color: white; }
 
 footer #copyright {
   float: left;
   padding-top: .75vh; }
-
-footer iframe {
-  float: right; }
 
 h1, h2, h3, h4, h5 {
   font-family: "Open Sans", sans-serif; }
@@ -71,14 +110,14 @@ h1 {
   font-size: 5vw;
   max-width: 50%;
   margin-bottom: 1vh;
-  padding-top: 2vh; }
+  padding-top: 4vh; }
 
 h5 {
   font-size: 2vw;
   max-width: 50%;
   font-style: italic; }
 
-p, a, button {
+p, a {
   font-family: "Roboto", sans-serif; }
 
 #menu {
@@ -92,45 +131,45 @@ p, a, button {
   font-size: 2.5vw; }
 
 #menu a:hover {
-  color: blue; }
+  color: white; }
 
+/* CSS for Overlay Menu */
 #overlay {
   position: fixed;
-  /* Sit on top of the page content */
   display: none;
   /* Hidden by default */
   width: 100%;
-  /* Full width (cover the whole page) */
   height: 100%;
-  /* Full height (cover the whole page) */
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: black;
-  /* Black background with opacity */
   z-index: 2;
-  /* Specify a stack order in case you're using a different order for other elements */ }
+  /* Make sure the menu appears on top of other content*/ }
 
 #menu-header {
-  height: 5vh;
-  background-color: black; }
+  height: 5vh; }
 
 #menu-header a {
   float: left;
-  padding-top: .75vh; }
+  padding-top: .75vh;
+  text-decoration: none;
+  font-size: 2vh; }
 
 #menu-header i {
-  float: right; }
+  float: right;
+  margin-top: .5vh;
+  margin-right: .5vh; }
 
-#overlay a:hover {
-  color: white; }
+#menu-footer iframe {
+  float: right; }
 
 #overlay a, p, i {
   color: white; }
 
 #menu-main {
-  height: 80vh;
+  height: 82vh;
   width: auto;
   clear: both;
   padding-top: 8vh; }
@@ -143,8 +182,7 @@ p, a, button {
   font-size: 4vw; }
 
 menu-footer {
-  height: 5vh;
-  background-color: black;
+  height: 3vh;
   padding-top: .5vh; }
 
 /*# sourceMappingURL=styles.css.map */
