--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@
   padding-top: .01px; }
 
 #main-header {
-  height: 3vh;
+  height: 4vh;
   background-color: RGB(127, 127, 127);
   padding-top: .5vh; }
 
@@ -67,20 +67,20 @@
   float: left;
   text-decoration: none;
   color: white;
-  padding-top: .4vh;
-  font-size: 2vh; }
+  padding-top: .6vh;
+  font-size: 1.5vw; }
 
 #main-header #right {
   float: right;
   display: flex; }
 
-#main-header #callToAction {
+#main-header .callToAction {
   background-color: RGB(254, 229, 153);
-  padding: .25vh;
-  border: 1px solid black; }
+  border: 1px solid black;
+  padding-top: .75vh; }
 
-#main-header #callToAction a {
-  font-size: 2vh;
+#main-header .callToAction a {
+  font-size: 1vw;
   text-decoration: none;
   color: black; }
 
@@ -101,7 +101,8 @@
 
 footer #copyright {
   float: left;
-  padding-top: .75vh; }
+  padding-top: .25vh;
+  font-size: 1vw; }
 
 h1, h2, h3, h4, h5 {
   font-family: "Open Sans", sans-serif; }
@@ -155,21 +156,22 @@ p, a {
   float: left;
   padding-top: .75vh;
   text-decoration: none;
-  font-size: 2vh; }
+  font-size: 4vw; }
 
-#menu-header i {
+#menu-header .fa-times {
   float: right;
   margin-top: .5vh;
-  margin-right: .5vh; }
+  margin-right: 1.25vh; }
 
 #menu-footer iframe {
-  float: right; }
+  float: right;
+  margin-right: 3vh; }
 
 #overlay a, p, i {
   color: white; }
 
 #menu-main {
-  height: 82vh;
+  height: 80vh;
   width: auto;
   clear: both;
   padding-top: 8vh; }
@@ -184,5 +186,72 @@ p, a {
 menu-footer {
   height: 3vh;
   padding-top: .5vh; }
+
+/* Media Queries */
+@media (min-height: 651px) and (max-height: 1000px) {
+  #main-header {
+    height: 6vh; }
+
+  #homepage, #homepage-education, #homepage-industry, #homepage-outreach, #homepage-research, #homepage-about {
+    height: 89vh; }
+
+  #main-footer {
+    height: 4vh; } }
+@media (max-height: 650px) {
+  #main-header .callToAction {
+    display: none; }
+
+  #main-header {
+    height: 9vh; }
+
+  #homepage, #homepage-education, #homepage-industry, #homepage-outreach, #homepage-research, #homepage-about {
+    height: 86vh; }
+
+  #main-footer {
+    height: 4vh; }
+
+  #menu-main {
+    height: 70vh; } }
+@media (min-width: 801px) and (max-width: 1000px) {
+  #main-header #name {
+    font-size: 2.5vw;
+    padding-top: 1vw; } }
+@media (min-width: 301px) and (max-width: 800px) {
+  #main-header #name {
+    font-size: 4vw;
+    padding-top: 1.5vw; }
+
+  #menu a {
+    font-size: 5vw; }
+
+  footer #copyright {
+    font-size: 2vw; }
+
+  #menu-main a {
+    font-size: 6vw; } }
+@media (max-width: 300px) {
+  #main-header #name {
+    font-size: 5vw;
+    padding-top: 1.5vw; }
+
+  #menu a {
+    font-size: 8vw; }
+
+  footer #copyright {
+    font-size: 3vw; }
+
+  h1 {
+    font-size: 9vw;
+    max-width: 75%; }
+
+  h5 {
+    font-size: 6vw;
+    max-width: 75%; }
+
+  #menu-main a {
+    font-size: 8vw; }
+
+  #menu-header a {
+    font-size: 5vw; } }
 
 /*# sourceMappingURL=styles.css.map */
