--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,17 @@ menu-footer {
 @media (min-width: 801px) and (max-width: 1000px) {
   #main-header #name {
     font-size: 2.5vw;
-    padding-top: 1vw; } }
+    padding-top: 1vw; }
+
+  .content .gallery a img {
+    width: 90%;
+    margin: 4%; }
+
+  .content p {
+    font-size: 2vw; }
+
+  .content ul {
+    font-size: 2vw; } }
 @media (min-width: 301px) and (max-width: 800px) {
   #main-header #name {
     font-size: 4vw;
@@ -274,7 +284,25 @@ menu-footer {
     font-size: 2vw; }
 
   #menu-main a {
-    font-size: 6vw; } }
+    font-size: 6vw; }
+
+  .content .gallery a img {
+    width: 90%;
+    margin: 4%; }
+
+  .content h1 {
+    font-size: 6vw;
+    text-align: center; }
+
+  .content h2 {
+    font-size: 4vw;
+    float: left; }
+
+  .content p {
+    font-size: 2.5vw; }
+
+  .content ul {
+    font-size: 2.5vw; } }
 @media (max-width: 300px) {
   #main-header #name {
     font-size: 5vw;
@@ -298,6 +326,24 @@ menu-footer {
     font-size: 8vw; }
 
   #menu-header a {
-    font-size: 5vw; } }
+    font-size: 5vw; }
+
+  .content .gallery a img {
+    width: 90%;
+    margin: 4%; }
+
+  .content h1 {
+    font-size: 7vw;
+    text-align: center; }
+
+  .content h2 {
+    font-size: 6.5vw;
+    float: left; }
+
+  .content p {
+    font-size: 4vw; }
+
+  .content ul {
+    font-size: 4vw; } }
 
 /*# sourceMappingURL=styles.css.map */
