--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,8 @@
   font-size: 1.5vw; }
 #main-header #right {
   float: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; }
 #main-header .callToAction {
   background-color: RGB(254, 229, 153);
@@ -229,9 +231,15 @@ p, a, li {
   text-align: right;
   font-size: 4vw; }
 
-menu-footer {
+#menu-footer {
   height: 3vh;
   padding-top: .5vh; }
+
+/* CSS for Google Charts */
+#chart_div, #line_div {
+  margin: auto;
+  padding-top: 6vh;
+  padding-bottom: 2vh; }
 
 /* Media Queries */
 @media (min-height: 651px) and (max-height: 1000px) {
