--- a/css/styles.css
+++ b/css/styles.css
@@ -105,29 +105,27 @@
   padding-left: 1%;
   padding-top: .1%; }
 
-#main-header {
+.main-header {
   height: 4vh;
   background-color: RGB(127, 127, 127);
   padding-top: .5vh; }
 
 /* SASS Nesting */
-#main-header #name {
+.main-header #name {
   float: left;
   text-decoration: none;
   color: white;
   padding-top: .6vh;
   font-size: 1.5vw; }
-#main-header #right {
+.main-header #right {
   float: right;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex; }
-#main-header .callToAction {
+.main-header .callToAction {
   background-color: RGB(254, 229, 153);
   border: 1px solid black;
   padding-top: .75vh; }
 
-#main-header .callToAction a {
+.main-header .callToAction a {
   font-size: 1vw;
   text-decoration: none;
   color: black; }
@@ -138,12 +136,12 @@
   padding-top: .25vh;
   color: black; }
 
-#main-footer {
+.main-footer {
   height: 2vh;
   background-color: RGB(127, 127, 127);
   padding-top: .5vh; }
 
-#main-footer p a {
+.main-footer p a {
   text-decoration: none;
   color: white; }
 
@@ -243,31 +241,31 @@ p, a, li {
 
 /* Media Queries */
 @media (min-height: 651px) and (max-height: 1000px) {
-  #main-header {
+  .main-header {
     height: 6vh; }
 
   #homepage, #homepage-education, #homepage-industry, #homepage-outreach, #homepage-research, #homepage-about {
     height: 89vh; }
 
-  #main-footer {
+  .main-footer {
     height: 4vh; } }
 @media (max-height: 650px) {
-  #main-header .callToAction {
+  .main-header .callToAction {
     display: none; }
 
-  #main-header {
+  .main-header {
     height: 9vh; }
 
   #homepage, #homepage-education, #homepage-industry, #homepage-outreach, #homepage-research, #homepage-about {
     height: 86vh; }
 
-  #main-footer {
+  .main-footer {
     height: 4vh; }
 
   #menu-main {
     height: 70vh; } }
 @media (min-width: 801px) and (max-width: 1000px) {
-  #main-header #name {
+  .main-header #name {
     font-size: 2.5vw;
     padding-top: 1vw; }
 
@@ -281,7 +279,7 @@ p, a, li {
   .content ul {
     font-size: 2vw; } }
 @media (min-width: 301px) and (max-width: 800px) {
-  #main-header #name {
+  .main-header #name {
     font-size: 4vw;
     padding-top: 1.5vw; }
 
@@ -312,7 +310,7 @@ p, a, li {
   .content ul {
     font-size: 2.5vw; } }
 @media (max-width: 300px) {
-  #main-header #name {
+  .main-header #name {
     font-size: 5vw;
     padding-top: 1.5vw; }
 
