--- a/css/styles.scss
+++ b/css/styles.scss
@@ -127,7 +127,7 @@ $regular-font: 'Roboto', sans-serif;
   padding-top: .1%;
 }
 
-#main-header {
+.main-header {
   height: 4vh;
   background-color: $background-color;
   padding-top: .5vh;
@@ -135,7 +135,7 @@ $regular-font: 'Roboto', sans-serif;
 
 /* SASS Nesting */
 
-#main-header {
+.main-header {
   #name {
     float: left;
     text-decoration: none;
@@ -154,7 +154,7 @@ $regular-font: 'Roboto', sans-serif;
   }
 }
 
-#main-header .callToAction a {
+.main-header .callToAction a {
   font-size: 1vw;
   text-decoration: none;
   color: black;
@@ -167,13 +167,13 @@ $regular-font: 'Roboto', sans-serif;
   color: black;
 }
 
-#main-footer {
+.main-footer {
   height: 2vh;
   background-color: $background-color;
   padding-top: .5vh;
 }
 
-#main-footer p a {
+.main-footer p a {
   text-decoration: none;
   color: white;
 }
@@ -293,28 +293,28 @@ p, a, li {
 /* Media Queries */
 
 @media (min-height:651px)and (max-height:1000px) {
-  #main-header{
+  .main-header{
     height: 6vh;
   }
   #homepage, #homepage-education, #homepage-industry, #homepage-outreach, #homepage-research, #homepage-about {
     height: 89vh;
   }
-  #main-footer {
+  .main-footer {
     height: 4vh;
   }
 }
 
 @media (max-height:650px) {
-  #main-header .callToAction {
+  .main-header .callToAction {
     display: none;
   }
-  #main-header{
+  .main-header{
     height: 9vh;
   }
   #homepage, #homepage-education, #homepage-industry, #homepage-outreach, #homepage-research, #homepage-about {
     height: 86vh;
   }
-  #main-footer {
+  .main-footer {
     height: 4vh;
   }
   #menu-main {
@@ -323,7 +323,7 @@ p, a, li {
 }
 
 @media (min-width:801px)and (max-width:1000px) {
-  #main-header #name {
+  .main-header #name {
     font-size: 2.5vw;
     padding-top: 1vw;
   }
@@ -341,7 +341,7 @@ p, a, li {
 }
 
 @media (min-width:301px)and (max-width:800px) {
-  #main-header #name {
+  .main-header #name {
     font-size: 4vw;
     padding-top: 1.5vw;
   }
@@ -376,7 +376,7 @@ p, a, li {
 }
 
 @media (max-width:300px) {
-  #main-header #name {
+  .main-header #name {
     font-size: 5vw;
     padding-top: 1.5vw;
   }
