refactored chart.js to accept energy data directly from API.  Had to simplify charts to submit assignment on time

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -284,7 +284,7 @@ p, a, li {
 
 /* CSS for Google Charts */
 
-#chart_div, #line_div {
+#consumption_div, #production_div {
   margin: auto;
   padding-top: 6vh;
   padding-bottom: 2vh;
