--- a/css/styles.css
+++ b/css/styles.css
@@ -234,7 +234,7 @@ p, a, li {
   padding-top: .5vh; }
 
 /* CSS for Google Charts */
-#chart_div, #line_div {
+#consumption_div, #production_div {
   margin: auto;
   padding-top: 6vh;
   padding-bottom: 2vh; }
